--- a/_posts/2019-05-12-git.markdown
+++ b/_posts/2019-05-12-git.markdown
@@ -42,8 +42,12 @@ git merge remotes/upstreamname/repo/master
 # revert uncommitted changes including files and folders  
 
 {% highlight shell %}
-# Revert changes to modified files.
+# Revert changes to modified files   
 git reset --hard
+
+# Revert changes of a single file  
+git checkout HEAD -- my-file.txt
+
 
 # Remove all untracked files and directories. (`-f` is `force`, `-d` is `remove directories`)
 git clean -fd
