--- a/_posts/2019-05-12-git.markdown
+++ b/_posts/2019-05-12-git.markdown
@@ -51,6 +51,7 @@ git checkout HEAD -- my-file.txt
 
 # Remove all untracked files and directories. (`-f` is `force`, `-d` is `remove directories`)
 git clean -fd
+{% endhighlight %}
 
 # force local repo to be exactly the same with upstream  
 
